put a reasonable default layout for streams, fix z-index

--- a/s3-bingo/css/style.css
+++ b/s3-bingo/css/style.css
@@ -19,6 +19,25 @@ body {
 	font-family: "Splatoon2";
 }
 
+#about_bingo {
+	position: absolute;
+	left: 10px;
+	width:365px;
+}
+
+#randomweapon {
+	position: absolute;
+	right: 30px;
+	bottom: 30px;
+}
+
+#results {
+	position: absolute;
+	right: 30px;
+	top: 30px;
+	width:594px;
+}
+
 header {
 	-moz-box-shadow:1px 1px 2px rgba(0,0,0,0.6);
 	-webkit-box-shadow:1px 1px 2px rgba(0,0,0,0.6);
@@ -165,12 +184,6 @@ th {
 	display:none;
 }
 
-#bingoPage #results {
-	float:left;
-	margin-right:16px;
-	text-align:right;
-	width:594px;
-}
 
 #bingoPage .newcard {
 	-khtml-user-select:none;
@@ -308,11 +321,6 @@ th {
 
 #bingoPage #bingo tr td.redsquare:hover,#bingoPage #bingo tr td.redsquare.hover {
 	background:#702;
-}
-
-#bingoPage #about_bingo {
-	float:right;
-	width:365px;
 }
 
 #boardList li {
